fix input and button spacing

--- a/core/admin/assets/ee-admin-page.css
+++ b/core/admin/assets/ee-admin-page.css
@@ -2861,7 +2861,7 @@ body.espresso-admin #contextual-help-wrap strong {
     height:  calc(var(--ee-button-height) + 1px);
     justify-content: center;
     line-height: 2;
-    margin: 0;
+    margin: 0.25rem;
     min-width: max(4rem, 25%);
     outline: none !important;
     padding: 0;
@@ -2872,6 +2872,12 @@ body.espresso-admin #contextual-help-wrap strong {
     user-select: none;
     vertical-align: middle;
     white-space: nowrap;
+}
+
+.espresso-admin td > select:first-child,
+.espresso-admin td > textarea:first-child,
+.espresso-admin td > input:not([type="radio"]):not([type="submit"]):not([type="button"]):not([type="checkbox"]):first-child {
+    margin-inline-start: 0;
 }
 
 
@@ -3135,16 +3141,14 @@ body.espresso-admin #contextual-help-wrap strong {
     justify-content: center;
     line-height: 1.25;
     margin: 0;
+    margin-block: 0.25rem;
     margin-inline: 0.5rem;
-    /* max-height: var(--ee-button-height); */
     min-height: var(--ee-button-height);
     min-width: var(--ee-button-height);
     outline: 0;
     padding: 0;
-    /* padding-inline: var(--ee-button-height-third); */
-    /* padding-inline: calc(var(--ee-button-height-half) - var(--ee-button-height-shim)); */
-padding-block: var(--ee-button-height-sixth);
-padding-inline: calc(var(--ee-button-height-half) - var(--ee-button-height-shim));
+    padding-block: var(--ee-button-height-sixth);
+    padding-inline: calc(var(--ee-button-height-half) - var(--ee-button-height-shim));
     position: relative;
     text-align: center;
     text-decoration: none;
@@ -3186,7 +3190,6 @@ padding-inline: calc(var(--ee-button-height-half) - var(--ee-button-height-shim)
     --ee-button-height: 2rem;
     font-size: calc((var(--ee-button-height) *.6) - var(--ee-button-height-shim));
     height: var(--ee-button-height);
-    /* padding-block: calc(var(--ee-button-height-half) - var(--ee-button-height-shim)); */
     padding-block: calc(var(--ee-button-height-half) - 2px);
 }
 
